LU-12140 lnet: adds checking msg len

The LNET can't handle a msg with len larger than LNET_MTU.
The next error occured for DOM 1MB
 LNetError: 3137:0:(lib-move.c:4143:lnet_parse()) 192.168.8.1@tcp,
 src 192.168.8.1@tcp: bad PUT payload 1051832 (1048576 max expected)

The patch adds fragment size check.

Signed-off-by: Alexander Boyko <c17825@cray.com>
Cray-bug-id: LUS-7174
Change-Id: Id2d21ebd87ab0bf3a9114548900fab99b278ffb0
Reviewed-on: https://review.whamcloud.com/34975
Tested-by: Jenkins
Reviewed-by: Alexey Lyashkov <c17817@cray.com>
Tested-by: Maloo <maloo@whamcloud.com>
Reviewed-by: Mike Pershin <mpershin@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>